style.css
* {
    font-family: sans-serif;
}

body {
    padding: 0;
    margin: 0;
}

header {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    padding: 1em 1.5em;
    flex-wrap: nowrap;    
    user-select: none;
}


#nav-right {
    margin-left: auto;
}

a {
    display: inline-block;
    color: black;
    font-size: 13px;
    text-decoration: none;
    padding: 0.5em;
}

a:hover {
    text-decoration: underline;
}

#google-apps-button {
    display: inline-block;
    box-sizing: border-box;
    vertical-align: middle;
    background: url(https://ssl.gstatic.com/gb/images/i1_1967ca6a.png) -132px -38px;
    background-size: 528px 68px;
    width: 30px;
    height: 30px;
    opacity: 50%;
}

#google-apps-button:hover {
    opacity: 100%;
}

#signin-button {
    box-sizing: border-box;
    display: inline-block;
    border-radius: 2px;
    padding: 0.6em 1em;
    background-color: #4485f5;
    color: white;
    margin-left: 0.75em;
    margin-right: 0.75em;
    text-decoration: none;
}


main { 
    margin-top: 12vh;
    padding: 0 2em;
}

.google-logo {
    display: block;
    margin: 0 auto;
}

#search-container {    
    margin: 24px auto;
    padding: 0.25em 0.4em;
    border: 1px solid #d2d2d2;
    border-radius: 50px;
    min-width: 256px;
    max-width: 512px;
    display: flex;
    justify-content: stretch;
}

#search-icon {    
    display: inline-block;
    margin: 0;
    width: 24px;
    height: 24px;
    padding: 0.4em;
    justify-content: center;
    align-items: center;
}

#search-field {
    justify-self: auto;
    border-radius: 0px;
    border: 0;
    font-size: 16px;
    flex-grow: 1;
    min-width: 32px;
}

input:focus {
    border: 0;
    outline: none;
}

#search-voice {
    display: inline-block;    
    background: url(https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png) no-repeat;
    background-origin: content-box;
    background-size: 24px;
    width: 24px;
    height: 24px;
    padding: 0.4em;
}

#search-buttons{
    display: flex;
    justify-content: center;
}

#search-buttons input {
    margin: 0 0.5em;
    padding: 0.5em 0.75em;
    border: 1px solid #f4f4f4;
    border-radius: 4px;
    background-color: #f4f4f4;
    color: #5F6368;
    font-size: 14px;
}

#search-buttons input:hover {
    background: linear-gradient(to bottom, #f5f5f5, #f1f1f1);
    border: 1px solid #ddd;
    color: #222;
}

#search-buttons input:active {
    border: 1px solid #4485f5;
}

footer {
    box-sizing: border-box;
    width: 100%;
    border: 1px solid #ddd;
    padding: 0.5em;
    position: absolute;
    bottom: 0;
    background-color: #f2f2f2;
    display: flex;
    justify-content: space-between;
}

footer a {
    display: inline-block;
    color: #5F6368;
}


@media (max-width:420px) {
    header {
        visibility: hidden;
    }
}

@media (max-width: 640px) {
    footer {
        flex-direction: column-reverse;      
        align-items: center;
    }

}

